--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -411,33 +411,44 @@ Any metric can have optional conditions as well:
 
 ```yml
 type: binomial
+# The event name
 table: Purchased
+# Only include events which pass these conditions
 conditions:
-  - column: category #property
+  - column: category # property
     operator: "=" # "=", "!=", ">", "<", "<=", ">=", "~", "!~"
     value: clothing
 ```
 
-For count, duration, and revenue metrics, you can sum a numeric property:
+For count, duration, and revenue metrics, it will count the number of events per user by default:
+
+```yml
+type: count
+# Event name to count
+table: Page views
+```
+
+You can instead specify a javascript expression for the value of the event. By default, it will sum these values for each user:
 
 ```yml
 # A "Revenue per user" metric
 type: revenue
+# The event name
 table: Purchases
-# If a user has multiple "Purchases" events, this property will be summed together
+# The metric value that will be summed
 column: event.properties.grand_total
 ```
 
-For count metrics, we also support the equivalent of `COUNT DISTINCT` in sql:
+If you don't want to sum, you can also provide a custom aggregation method that reduces an array of `values` into a single number (or null). For example, here's a metric that counts the number of unique files downloaded per user
 
 ```yml
 type: count
 # The event name
 table: PDF Downloads
-# Javascript expression that we can to count
-column: event.properties.file
-# Tell it do a distinct count
-countDistinct: true
+# The "value" of the metric (the file name)
+column: event.properties.filename
+# The aggregation operation (number of unique values)
+aggregation: new Set(values).size
 ```
 
 ### Dimensions
