--- a/packages/docs/pages/faq.mdx
+++ b/packages/docs/pages/faq.mdx
@@ -88,11 +88,10 @@ If you are using feature flags, we recommend adding a caching layer between the 
 
 ## I can't upload to S3/getting 400 error when uploading to S3?
 
-* Make sure you've correctly set the `S3_BUCKET` and `S3_REGION` environment variables
-* Enable bucket ACL and set ownership to Bucket owner preferred: [read more here](https://stackoverflow.com/questions/70333681/for-an-amazon-s3-bucket-deplolyent-from-guithub-how-do-i-fix-the-error-accesscon).
-* Make sure the S3 bucket is publically accessible
-* Make sure CORS settings are correct. Add your URLs to the AllowedOrigins array or set to "*"
-
+- Make sure you've correctly set the `S3_BUCKET` and `S3_REGION` environment variables
+- Enable bucket ACL and set ownership to Bucket owner preferred: [read more here](https://stackoverflow.com/questions/70333681/for-an-amazon-s3-bucket-deplolyent-from-guithub-how-do-i-fix-the-error-accesscon).
+- Make sure the S3 bucket is publically accessible
+- Make sure CORS settings are correct. Add your URLs to the AllowedOrigins array or set to "\*"
 
 ## Can't find your question?
 
