Overhaul namespace input UI.

--- a/packages/docs/pages/app/api.mdx
+++ b/packages/docs/pages/app/api.mdx
@@ -52,7 +52,7 @@ Each feature definition has a default value and optional rules that override the
 
 If you've set up multiple projects within GrowthBook, you can optionally add a querystring to this endpoint to only include features in a specific project. By default, features from all projects are returned.
 
-To do this, add the querystring `?project={projectId}`. You can find the id for your project in settings (will start with `prj_`).
+To do this, add the querystring `?project={projectId}`. You can find the id for your project under Management->Projects (will start with `prj_`).
 
 For example:
 
