--- a/packages/docs/pages/app/features.mdx
+++ b/packages/docs/pages/app/features.mdx
@@ -150,11 +150,13 @@ You can analyze the result of an Experiment the same way you would any experimen
 
 #### Namespaces
 
-If you have multiple experiments that may conflict with each other (e.g. background color and text color), you can use **namespaces** to make the conflicting experiments mutually exclusive. Namespaces cover a range from 0 to 1 and experiments are allocated to subsets of this range. As long as two ranges do not overlap, a user will only ever be included in one of the experiments.
+If you have multiple experiments that may conflict with each other (e.g. background color and text color), you can use **namespaces** to make the conflicting experiments mutually exclusive.
+
+Users are randomly assigned a value from 0 to 1 for each namespace. Each experiment in a namespace has a range of values that it includes. Users are only part of an experiment if their value falls within the experiment's range. So as long as two experiment ranges do not overlap, users will only ever be in at most one of them.
 
 ![Namespaces](/images/namespaces.png)
 
-Before you can use this in an experiment, you must define your namespaces under Management -> Namespaces.
+Before you can use namespaces, you must configure them under Management -> Namespaces.
 
 ## Integration Options
 
