--- a/packages/docs/pages/app/api.mdx
+++ b/packages/docs/pages/app/api.mdx
@@ -6,11 +6,11 @@ With the **API**, your servers pull feature definitions from GrowthBook in a cro
 
 With [Webhooks](/app/webhooks), GrowthBook calls out to your servers as soon as features change in GrowthBook.
 
-## Creating API Keys
+## Environments and API Keys
 
-When you first start setting up features in GrowthBook, we auto-generate two unique API keys for you - one for **dev** and one for **production**.
+When you first start setting up features in GrowthBook, we create a "production" environment for you with an API key.
 
-You can see these keys and create new ones if needed by going to **Settings -> API Keys**.
+You can add new environments by going to **Settings -> Environments**.
 
 ## Feature Definitions Endpoint
 
