Auto-detect SMTP tls setting based on port (ON for 465, OFF for everything else)
Fixes #320

--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -48,7 +48,7 @@ growthbook:
 
 ### Email SMTP Settings
 
-This is required in order to send experiment alerts and team member invites.
+This is required in order to send experiment alerts, team member invites, and reset password emails.
 
 - **EMAIL_ENABLED** ("true" or "false")
 - **EMAIL_HOST**
@@ -56,7 +56,6 @@ This is required in order to send experiment alerts and team member invites.
 - **EMAIL_HOST_USER**
 - **EMAIL_HOST_PASSWORD**
 - **EMAIL_FROM**
-- **EMAIL_USE_TLS** ("true" or "false")
 
 ### Google OAuth Settings
 
