Added flutter docs in gb documentation

--- a/packages/docs/pages/lib/index.mdx
+++ b/packages/docs/pages/lib/index.mdx
@@ -9,6 +9,7 @@ We offer official SDKs in a few popular languages:
 - [Python](/lib/python)
 - [Go](/lib/go)
 - [Kotlin (Android)](/lib/kotlin)
+- [Flutter](/lib/flutter)
 
 There is also a guide if you want to [build your own](/lib/build-your-own).
 
