--- a/packages/docs/pages/app/metrics.mdx
+++ b/packages/docs/pages/app/metrics.mdx
@@ -30,7 +30,7 @@ Your SELECT statement should return one row per "conversion event". This may be 
 | 123     | 2021-08-23 12:45:14 | 10    |
 | 456     | 2021-08-23 12:45:15 | 5.25  |
 
-Metrics can support one or more types of user ids. The above example assumes the metric only supports a single id type called `user_id`, but you would add additional columns if you need to support other ones.
+Metrics can support one or more types of identifiers. The above example assumes the metric only supports a single id type called `user_id`, but you would add additional columns if you need to support other ones.
 
 Binomial metrics don't need a `value` column (the existence of a row means the user converted). For other metric types, the value represents the count, duration, or revenue from that single conversion event. In the case of multiple rows for a single user, the values will be summed together.
 
@@ -38,7 +38,7 @@ If you use Segment to populate your data warehouse, the SQL for a `Revenue per U
 
 ```sql
 SELECT
-  -- Assuming you support 2 user id types - 'user_id' and 'anonymous_id'
+  -- Assuming you support 2 identifier types - 'user_id' and 'anonymous_id'
   user_id as user_id,
   anon_id as anonymous_id,
   received_at as timestamp,
